<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lightup_key.bluetooth.android.iconnexys.bluetooth_lightup_key.MainActivity">

    <Button
        android:id="@+id/button1"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="Button1_OnClick"
        android:text="@string/action_led1_on"
        android:visibility="visible"
        tools:layout_editor_absoluteX="147dp" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:onClick="Button2_OnClick"
        android:text="@string/action_led2_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="Button3_OnClick"
        android:text="@string/action_all_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="43dp"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="Button4_OnClick"
        android:text="@string/action_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <ListView
        android:id="@+id/list"
        android:background="@drawable/bg_key"
        android:layout_width="292dp"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />

</RelativeLayout>
